fix content height overflow y hidden

--- a/src/app/maincontent/devspace/devspace.component.scss
+++ b/src/app/maincontent/devspace/devspace.component.scss
@@ -1,7 +1,7 @@
 section {
 background-color: #fff;
     width: 100%;
-    height: 90vh;
+    height: 85vh;
     border-radius: 24px;
     padding: 2rem;
     margin: 0.8rem;
