--- a/src/app/maincontent/maincontent.component.scss
+++ b/src/app/maincontent/maincontent.component.scss
@@ -1,13 +1,13 @@
 section {
   display: flex;
   width: 100%;
-  height: 80vh;
+  height: 85vh;
   justify-content: center;
 
   .main-content-center {
     display: flex;
     max-width: 1440px;
-    width: 100%;
+    width: 90%;
         gap: 15px;
   }
 }
